--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,7 @@ main article.fundamental {
   max-width: 1200px;
   margin-inline: auto;
   padding: 3rem 5rem;
+  text-align: justify;
 }
 
 main article.fundamental .fundamental-head {
